<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>xolobot_ascending</name>
  <version>1.0.0</version>
  <description>Contiene la configuración para lanzar el mundo de Xolobot.</description>
  <maintainer email="alopez@cua.uam.mx">Antoniño de Atocha</maintainer>
  <license>Apache 2.0</license>
  <author>Antonio</author>

  <depend>xolobot_description</depend>
  <depend>xolobot_kalanchoe_world</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

